# utf16string

./: Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: encode_char.rs
src/: error.rs  iters.rs  lib.rs  slicing.rs  utf16.rs  wstr.rs  wstring.rs
