[package]
name = "utf16string"
version = "0.2.0"
authors = [
    "Floris Bruynooghe <flub@devork.be>",
    "Sentry <oss@sentry.io>",
]
description = "String types to work directly with UTF-16 encoded strings"
readme = "README.md"
keywords = ["utf16", "string", "wstring"]
categories = ["encoding", "text-processing"]
repository = "https://github.com/getsentry/utf16string"
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
byteorder = "1"